examples/test/testpolicy2516.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2516
  namespace: namespace441
spec:
  podSelector:
    matchLabels:
      key27: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value39
          key9: value45
          key41: value2
      podSelector:
        matchLabels:
          key18: value44
